--- a/missoes.html
+++ b/missoes.html
@@ -89,7 +89,7 @@
                   <li class="dropdown-header">Notificações</li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Você subiu de posição no ranking!</strong></a></li>
+                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
                   <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
@@ -199,7 +199,7 @@
                   <small class="text-muted">Expira hoje às 23:59</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
@@ -225,7 +225,7 @@
                   <small class="text-muted">5 dias restantes</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
@@ -251,7 +251,7 @@
                   <small class="text-muted">18 dias restantes</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
@@ -279,7 +279,7 @@
                   <small class="text-muted">4 dias restantes</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
@@ -305,7 +305,7 @@
                   <small class="text-muted">Expira hoje às 10:00</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
@@ -331,7 +331,7 @@
                   <small class="text-muted">20 dias restantes</small>
                 </div>
                 <div class="mt-auto d-flex gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Detalhes</button>
+                  <button class="btn btn-sm btn-disputa">Detalhes</button>
                 </div>
               </div>
             </div>
