--- a/plano.html
+++ b/plano.html
@@ -89,7 +89,7 @@
                   <li class="dropdown-header">Notificações</li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Você subiu de posição no ranking!</strong></a></li>
+                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
                   <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
@@ -173,7 +173,7 @@
                       <div class="small text-muted">
                         Vídeo • 12 min • 80 pts
                       </div>
-                      <button class="btn btn-sm btn-outline-secondary mt-2">
+                      <button class="btn btn-sm btn-disputa mt-2">
                         Assistir
                       </button>
                     </div>
@@ -187,7 +187,7 @@
                       <div class="small text-muted">
                         Vídeo • 15 min • 100 pts
                       </div>
-                      <button class="btn btn-sm btn-outline-secondary mt-2">
+                      <button class="btn btn-sm btn-disputa mt-2">
                         Assistir
                       </button>
                     </div>
@@ -201,7 +201,7 @@
                       <div class="small text-muted">
                         Artigo • 10 min • 60 pts
                       </div>
-                      <button class="btn btn-sm btn-outline-secondary mt-2">
+                      <button class="btn btn-sm btn-disputa mt-2">
                         Ler
                       </button>
                     </div>
@@ -215,7 +215,7 @@
                       <div class="small text-muted">
                         Vídeo • 18 min • 120 pts
                       </div>
-                      <button class="btn btn-sm btn-outline-secondary mt-2">
+                      <button class="btn btn-sm btn-disputa mt-2">
                         Assistir
                       </button>
                     </div>
@@ -263,7 +263,7 @@
               <div class="card-footer bg-transparent text-end">
                 <a
                   href="plano.html#todas"
-                  class="btn btn-sm btn-outline-secondary"
+                  class="btn btn-sm btn-disputa"
                   >Ver todas</a
                 >
               </div>
