--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <li class="dropdown-header">Notificações</li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Você subiu de posição no ranking!</strong></a></li>
+                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
                   <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
@@ -190,8 +190,12 @@
                     <div class="mt-1">
                       <div class="ranking-label">Posição no ranking</div>
                       <div class="ranking-badges">
-                        <span class="badge bg-light text-dark" title="Ranking local">1º local</span>
-                        <span class="badge bg-light text-dark" title="Ranking global">2º global</span>
+                          <div style="display:inline-flex;flex-direction:column;align-items:center;margin-right:14px;">
+                            <span style="display:flex;width:56px;height:56px;background:#FF7420;border-radius:12px;align-items:center;justify-content:center;font-size:24px;color:#fff;font-weight:700;text-align:center;">1º</span>
+                          </div>
+                          <div style="display:inline-flex;flex-direction:column;align-items:center;">
+                            <span style="display:flex;width:56px;height:56px;background:#1b1b1b;border-radius:12px;align-items:center;justify-content:center;font-size:24px;color:#fff;font-weight:700;text-align:center;">2º</span>
+                          </div>
                       </div>
                     </div>
                   </div>
@@ -319,7 +323,7 @@
                                   <small class="text-muted">Expira hoje às 23:59</small>
                                 </div>
                                 <div class="d-flex justify-content-end mt-2">
-                                  <a href="missoes.html" class="btn btn-sm btn-outline-secondary">Detalhes</a>
+                                  <a href="missoes.html" class="btn btn-sm btn-disputa">Detalhes</a>
                                 </div>
                               </div>
 
@@ -344,7 +348,7 @@
                                   <small class="text-muted">5 dias restantes</small>
                                 </div>
                                 <div class="d-flex justify-content-end mt-2">
-                                  <a href="missoes.html" class="btn btn-sm btn-outline-secondary">Detalhes</a>
+                                  <a href="missoes.html" class="btn btn-sm btn-disputa">Detalhes</a>
                                 </div>
                               </div>
 
@@ -369,13 +373,13 @@
                                   <small class="text-muted">18 dias restantes</small>
                                 </div>
                                 <div class="d-flex justify-content-end mt-2">
-                                  <a href="missoes.html" class="btn btn-sm btn-outline-secondary">Detalhes</a>
+                                  <a href="missoes.html" class="btn btn-sm btn-disputa">Detalhes</a>
                                 </div>
                               </div>
                             </div>
                           </div>
                           <div class="card-footer bg-transparent text-end">
-                            <a href="missoes.html" class="btn btn-sm btn-outline-secondary">Ver todas</a>
+                            <a href="missoes.html" class="btn btn-sm btn-disputa">Ver todas</a>
                           </div>
                         </div>
                       </div>
@@ -433,7 +437,7 @@
                                 evidências
                               </button>
                               <button
-                                class="btn btn-outline-secondary"
+                                class="btn btn-disputa"
                                 data-bs-toggle="modal"
                                 data-bs-target="#gerirRecompensasModal"
                               >
@@ -473,7 +477,7 @@
                                     Colab.: Ana • 12:32 • R$ 126
                                   </div>
                                   <button
-                                    class="btn btn-sm btn-outline-secondary mt-2"
+                                    class="btn btn-sm btn-disputa mt-2"
                                     data-bs-toggle="modal"
                                     data-bs-target="#resolverDisputaModal"
                                   >
@@ -570,7 +574,7 @@
                   NPS.
                 </p>
                 <a href="plano.html" class="btn btn-sm btn-outline-secondary"
-                  >Plano de carreira</a
+                  >Trilha de aprendizagem</a
                 >
               </div>
             </div>
