--- a/ranking.html
+++ b/ranking.html
@@ -76,6 +76,25 @@
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
+              <!-- Sininho de notificação -->
+              <div class="nav-item dropdown position-relative me-2">
+                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                  <i class="bi bi-bell-fill fs-4 text-brand"></i>
+                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                    3
+                    <span class="visually-hidden">notificações não lidas</span>
+                  </span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                  <li class="dropdown-header">Notificações</li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
+                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
+                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                </ul>
+              </div>
               <!-- Menu dropdown do usuário -->
               <div class="dropdown text-end">
                 <a
