Implementa a tela de recuperação de senha

--- a/login.html
+++ b/login.html
@@ -117,7 +117,9 @@
                           Lembrar de mim
                         </label>
                       </div>
-                      <a href="#" class="text-decoration-none text-danger"
+                      <a
+                        href="recuperar-senha.html"
+                        class="text-decoration-none text-danger"
                         >Esqueceu a senha?</a
                       >
                     </div>
