Implementa persistência de dados em arquivo

--- a/login.html
+++ b/login.html
@@ -202,6 +202,7 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/database.js"></script>
     <script src="assets/js/login.js"></script>
     <script>
       lucide.createIcons();
